@@ -341,9 +341,7 @@ public class PipelineInstanceModel implements PipelineInfo {
         return String.format("%s: %s", latestStage.getState(), latestStage.getName());
     }
 
-    /**
-     * @deprecated use the other construction methods
-     */
+    @Deprecated(since = "use the other construction methods")
     public static PipelineInstanceModel createEmptyModel() {
         return new PipelineInstanceModel();
     }
@@ -475,7 +473,7 @@ public class PipelineInstanceModel implements PipelineInfo {
     }
 
     public static boolean isBisect(double naturalOrder) {
-        return naturalOrder - new Double(naturalOrder).intValue() > 0;//TODO: may be we should be using long, as int can lead to truncation
+        return naturalOrder - Double.valueOf(naturalOrder).longValue() > 0;
     }
 
     public TrackingTool getTrackingTool() {
